<resources>
    <string name="app_name">Brise</string>
    <string name="play">Play</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Log In</string>
    <string name="rgis">Create account?</string>
    <string name="register">Register</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign UP</string>
    <string name="masukan_email">   Masukan email</string>
    <string name="masukan_password">              Masukan password</string>
    <string name="konfirmasi_password">   Konfirmasi password</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="todo">TODO</string>
    <string name="brise">BRISE</string>
    <string name="title_activity_play">Play</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="communicate">Communicate</string>
    <string name="points_0">Points : 0</string>
    <string name="log_out">Log Out</string>
    <string name="app_info">App Info</string>
    <string name="logout">Logout</string>
    <string name="enter_to_play">Enter to play</string>
    <string name="bab_1" />
    <string name="bab1">Bab 1</string>


</resources>
