<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="#FFFFFF"
        android:padding="100dp">

        <TextView
            android:id="@+id/DisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="       Register      "
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#C4C4C4"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/RegisEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/mail"
            android:drawableLeft="@drawable/mail"
            android:hint="@string/masukan_email"
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></RelativeLayout>

        <EditText
            android:id="@+id/RegisPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form"
            android:drawableStart="@drawable/key"
            android:drawableLeft="@drawable/key"
            android:hint="@string/masukan_password"
            android:inputType="textPassword"
            android:padding="15dp"></EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></RelativeLayout>

        <EditText
            android:id="@+id/ConPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form"
            android:drawableStart="@drawable/key"
            android:drawableLeft="@drawable/key"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></RelativeLayout>

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/form"
            android:text="@string/sign_up"
            android:textSize="25sp"
            android:textStyle="bold"></Button>

    </LinearLayout></LinearLayout>