<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="30dp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#C4C4C4"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"></RelativeLayout>


        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:hint="@string/masukan_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/form"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:hint="@string/masukan_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </RelativeLayout>

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/form"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></RelativeLayout>

        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/form"
            android:text="Sign UP"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>